implement JWT authentication with login endpoint and configuration updates

--- a/.env.exmple
+++ b/.env.exmple
@@ -2,3 +2,5 @@ ODOO_REPO_PATH = E:\odoo-18-dev\odoo
 ODOO_CONFIG_PATH = E:\odoo-18-dev\conf\odoo-me.conf
 ODOO_DB_NAME = odoo-18-db
 ODOO_PYTHON_SITE_PACKAGES_PATH = E:\odoo-18-dev\.venv\Lib\site-packages
+
+JWT_SECRET_KEY=xyasudgvsaufg123123
